force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>