force-app/main/default/objects/Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Addresses</relationshipLabel>
    <relationshipName>Delivery_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>