force-app/main/default/objects/Address__c/fields/Actual_Distance_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Actual_Distance_to_Location__c</fullName>
    <description>The actual distance (not rounded up) to the nearest location</description>
    <label>Actual Distance to Location</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>