force-app/main/default/objects/Address__c/fields/Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address__c</fullName>
    <formula>(Address__Street__s) + BR() + 
(Address__City__s)  + &quot;, &quot; +
TEXT(Address__StateCode__s)  + &quot;, &quot; +
(Address__PostalCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Address</label>
    <type>Text</type>
</CustomField>