force-app/main/default/objects/Address__c/fields/Delivery_Zone_Color__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zone_Color__c</fullName>
    <label>Delivery Zone Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blanche</fullName>
                <label>White</label>
            </value>
            <value>
                <fullName>Bleu</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Grise</fullName>
                <label>Gray</label>
            </value>
            <value>
                <fullName>Jaune</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>orange</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>Rose</fullName>
                <label>Pink</label>
            </value>
            <value>
                <fullName>Turquoise</fullName>
            </value>
            <value>
                <fullName>Verte</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>