force-app/main/default/objects/Address__c/fields/Distance_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Location__c</fullName>
    <label>Distance To Location</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>