force-app/main/default/objects/Address__c/fields/Distance_to_Nearest_Location__c.field-meta.xml
<CustomField>
    <fullName>Distance_to_Nearest_Location__c</fullName>
    <formula>IF(ISBLANK(Distance_To_Location__c), &quot;&quot;, TEXT(Distance_To_Location__c / 1000) &amp; &quot; km&quot;)</formula>
    <label>Distance to Nearest Location</label>
    <type>Text</type>
</CustomField>