force-app/main/default/objects/Address__c/fields/Last_Location_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Location_Update__c</fullName>
    <label>Last Location Update</label>
    <type>DateTime</type>
</CustomField>