force-app/main/default/objects/Address__c/fields/Nearest_Location__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nearest Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>