force-app/main/default/objects/Address__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Montréal</fullName>
                <label>Montreal</label>
            </value>
            <value>
                <fullName>Québec</fullName>
                <label>Quebec</label>
            </value>
            <value>
                <fullName>Gatineau</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Nouveau-Brunswick</fullName>
                <label>New Brunswick</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>