force-app/main/default/objects/Address__c/fields/Sage_API_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Sage_API_Response_Code__c</fullName>
    <label>Sage API Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>