force-app/main/default/objects/Address__c/fields/Sage_API_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sage_API_Timestamp__c</fullName>
    <label>Sage API Timestamp</label>
    <type>DateTime</type>
</CustomField>