force-app/main/default/objects/Address__c/fields/Ship_To_Location_Key__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location_Key__c</fullName>
    <label>Ship To Location Key</label>
    <length>7</length>
    <type>Text</type>
</CustomField>