force-app/main/default/objects/Address__c/fields/Ship_To_Location_Key_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location_Key_Number__c</fullName>
    <formula>VALUE(IF(LEFT(Ship_To_Location_Key__c,1)==&apos;A&apos;, RIGHT(Ship_To_Location_Key__c, LEN(Ship_To_Location_Key__c) - 1) , NULL))</formula>
    <label>Ship To Location Key Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>