force-app/main/default/objects/Address__c/fields/Sync_to_Sage__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Sage__c</fullName>
    <label>Sync to Sage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>