force-app/main/default/objects/Address__c/fields/Tax_group_old__c.field-meta.xml
<CustomField>
    <fullName>Tax_group_old__c</fullName>
    <label>Tax group old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
            <value>
                <fullName>OHST</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>MARHST</fullName>
            </value>
            <value>
                <fullName>NOTAX</fullName>
            </value>
            <value>
                <fullName>TPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>